[gd_scene load_steps=28 format=2]

[ext_resource path="res://Scripts/PlayerMovement.gd" type="Script" id=1]
[ext_resource path="res://anims/idle/IdleAnim1.png" type="Texture" id=2]
[ext_resource path="res://anims/idle/IdleAnim2.png" type="Texture" id=3]
[ext_resource path="res://anims/idle/IdleAnim4.png" type="Texture" id=4]
[ext_resource path="res://anims/idle/IdleAnim3.png" type="Texture" id=5]
[ext_resource path="res://anims/runR/RunAnim1.png" type="Texture" id=6]
[ext_resource path="res://anims/runR/RunAnim2.png" type="Texture" id=7]
[ext_resource path="res://anims/runR/RunAnim3.png" type="Texture" id=8]
[ext_resource path="res://anims/runR/RunAnim4.png" type="Texture" id=9]
[ext_resource path="res://Scenes/AnimScript.gd" type="Script" id=10]
[ext_resource path="res://anims/runL/RunAnimFlipped1.png" type="Texture" id=11]
[ext_resource path="res://anims/runL/RunAnimFlipped3.png" type="Texture" id=12]
[ext_resource path="res://anims/runL/RunAnimFlipped4.png" type="Texture" id=13]
[ext_resource path="res://anims/runL/RunAnimFlipped2.png" type="Texture" id=14]
[ext_resource path="res://anims/jump/JumpAnim2.png" type="Texture" id=15]
[ext_resource path="res://anims/jump/JumpAnim3.png" type="Texture" id=16]
[ext_resource path="res://anims/jump/JumpAnim1.png" type="Texture" id=17]
[ext_resource path="res://anims/jump/JumpAnim4.png" type="Texture" id=18]
[ext_resource path="res://anims/wall/WallAnim1.png" type="Texture" id=19]
[ext_resource path="res://anims/wall/WallAnim2.png" type="Texture" id=20]
[ext_resource path="res://anims/jump/JumpAnim7.png" type="Texture" id=21]
[ext_resource path="res://anims/jump/JumpAnim5.png" type="Texture" id=22]
[ext_resource path="res://anims/jump/JumpAnim6.png" type="Texture" id=23]

[sub_resource type="CapsuleShape2D" id=4]
radius = 3.5
height = 12.0

[sub_resource type="RectangleShape2D" id=2]
extents = Vector2( 1.625, 1.5 )

[sub_resource type="RectangleShape2D" id=3]
extents = Vector2( 1.625, 1.5 )

[sub_resource type="SpriteFrames" id=5]
animations = [ {
"frames": [ ExtResource( 21 ) ],
"loop": true,
"name": "airDownL",
"speed": 5.0
}, {
"frames": [ ExtResource( 16 ) ],
"loop": true,
"name": "airDownR",
"speed": 5.0
}, {
"frames": [ ExtResource( 23 ) ],
"loop": true,
"name": "airUpL",
"speed": 5.0
}, {
"frames": [ ExtResource( 15 ) ],
"loop": true,
"name": "airUpR",
"speed": 5.0
}, {
"frames": [ ExtResource( 2 ), ExtResource( 3 ), ExtResource( 5 ), ExtResource( 4 ) ],
"loop": true,
"name": "idle",
"speed": 5.0
}, {
"frames": [ ExtResource( 22 ) ],
"loop": true,
"name": "jumpL",
"speed": 5.0
}, {
"frames": [ ExtResource( 17 ) ],
"loop": true,
"name": "jumpR",
"speed": 5.0
}, {
"frames": [ ExtResource( 18 ) ],
"loop": true,
"name": "landed",
"speed": 5.0
}, {
"frames": [ ExtResource( 11 ), ExtResource( 14 ), ExtResource( 12 ), ExtResource( 13 ) ],
"loop": true,
"name": "runL",
"speed": 10.0
}, {
"frames": [ ExtResource( 6 ), ExtResource( 7 ), ExtResource( 8 ), ExtResource( 9 ) ],
"loop": true,
"name": "runR",
"speed": 10.0
}, {
"frames": [ ExtResource( 19 ) ],
"loop": true,
"name": "wallSlidingL",
"speed": 5.0
}, {
"frames": [ ExtResource( 20 ) ],
"loop": true,
"name": "wallSlidingR",
"speed": 5.0
} ]

[node name="Player" type="KinematicBody2D"]
collision_layer = 2
script = ExtResource( 1 )

[node name="Collider" type="CollisionShape2D" parent="."]
shape = SubResource( 4 )

[node name="LeftWall" type="Area2D" parent="."]
position = Vector2( -3, -3 )
collision_layer = 0

[node name="CollisionShape2D" type="CollisionShape2D" parent="LeftWall"]
position = Vector2( -2.375, 0 )
shape = SubResource( 2 )

[node name="RightWall" type="Area2D" parent="."]
position = Vector2( 3, -3 )
collision_layer = 0

[node name="CollisionShape2D" type="CollisionShape2D" parent="RightWall"]
position = Vector2( 2.375, 0 )
shape = SubResource( 3 )

[node name="LeftLedge" type="RayCast2D" parent="."]
position = Vector2( -3, -9 )
enabled = true
cast_to = Vector2( -5, -2 )

[node name="RightLedge" type="RayCast2D" parent="."]
position = Vector2( 3, -9 )
enabled = true
cast_to = Vector2( 5, -2 )

[node name="LeftPull" type="RayCast2D" parent="."]
position = Vector2( -3, -9 )
enabled = true
cast_to = Vector2( -5, 4 )

[node name="RightPull" type="RayCast2D" parent="."]
position = Vector2( 3, -9 )
enabled = true
cast_to = Vector2( 5, 4 )

[node name="Grab" type="Position2D" parent="."]
position = Vector2( 0, -22 )

[node name="Animation" type="AnimatedSprite" parent="."]
position = Vector2( -0.5, -6.5 )
frames = SubResource( 5 )
animation = "airDownL"
playing = true
script = ExtResource( 10 )
